--- a/index.html
+++ b/index.html
@@ -162,6 +162,32 @@
             
             <article id="formacao">
                 <h2> <i class="fa-solid fa-graduation-cap"></i> Formação </h2>
+
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">1991 - 1994</p>
+                        <h3 class="instituicao">Escola Técnica Carioca</h3>
+                        <p class="titulacao">Técnico em Informática</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1995 - 2000</p>
+                        <h3 class="instituicao">Instituto Superior de Tecnologia</h3>
+                        <p class="titulacao">Bacharelado em Ciência da computação</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">1998 - 2000</p>
+                        <h3 class="instituicao">Centro de Graduação de Professores</h3>
+                        <p class="titulacao">Licenciatura em Informática</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2000 - 2001</p>
+                        <h3 class="instituicao">Escola de Inglês Técnica</h3>
+                        <p class="titulacao">Curso de Inglês</p>
+                    </div>
+                </div>
             </article>
             
             <article id="projetos">
