--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#video" class="link"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -192,13 +192,56 @@
             
             <article id="projetos">
                 <h2> <i class="fa-solid fa-trowel-bricks"></i> Projetos </h2>
+
+                <div id="projeto-container">
+                    <div class="projeto">
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2022</p>
+                            <h3 class="titulo">Projeto de Vídeos</h3>
+                            <p> Projeto construído para treinar a inserção de vídeos em nosso site. </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit excepturi, temporibus aperiam, dolorem velit distinctio debitis aut eligendi blanditiis veritatis in, neque eum. Exercitationem laboriosam, vitae rerum unde itaque provident? </p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p> Projeto construído para treinar efeito paralax em imagens. </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit excepturi, temporibus aperiam, dolorem velit distinctio debitis aut eligendi blanditiis veritatis in, neque eum. Exercitationem laboriosam, vitae rerum unde itaque provident? </p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto">
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p> Projeto construído para treinar conteúdo e imagens dinâmicas. </p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit excepturi, temporibus aperiam, dolorem velit distinctio debitis aut eligendi blanditiis veritatis in, neque eum. Exercitationem laboriosam, vitae rerum unde itaque provident? </p>
+                            </details>
+                        </div>
+                    </div>
+
+                </div>
             </article>
         </section>
     </main>
 
     <footer>
-
+        <p> Portfólio desenvolvido por <a href="#" target="_blank">Allan Nogueira</a> em 2025 </p>
     </footer>
+
     <script src="scripts/script.js"></script>
 </body>
 </html>
